# google-sync

./: .gitignore  README.md  prep-gam-files.py  prep-gam-user-files.py  pyproject.toml  requirements.txt  sync-google.sh  sync-users.sh
.github/workflows/: codeql-analysis.yml
.trunk/: trunk.yaml
google_sync/: gam-admins.sh  gam-users.sh  prep-admin-files.py  prep-gam-files.py  prep-user-files.py  prep_admin_files.py  prep_user_files.py  sync-google.sh
tests/: test_google_sync.py
