[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
license-expression = "MIT"
dependencies = [
    "pandas>=1.4.1"]
requires-python = ">=3.9"

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
prep-admins.cmd = "python google_sync/prep-admin-files.py"
prep-users.cmd = "python google_sync/prep-user-files.py"
gam-admins.cmd = "bash ./google_sync/gam-admins.sh"
gam-users.cmd = "bash ./google_sync/gam-users.sh"
