[project]
name = ""
version = ""
description = ""
authors = [
  { name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com" },
]
license-expression = "MIT"
dependencies = ["pandas>=1.4.1"]
requires-python = ">=3.9"

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
prep-admins = { call = "google_sync.prep_admin_files:main" }
prep-users = { call = "google_sync.prep_user_files:main" }
gam-admins = { cmd = "bash ./google_sync/gam-admins.sh" }
gam-users = { cmd = "bash ./google_sync/gam-users.sh" }
gam-update = { cmd = "bash <(curl -s -S -L https://gam-shortn.appspot.com/gam-install) -l" }
post_lock = { shell = "pdm export -f requirements > requirements.txt" }
